Initial html structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,146 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <header>
+        <div class="icon search"></div>
+        <search></search>
+        <div class="icon notifications"></div>
+        <img src="" alt="Avatar Image" />
+        <p>Morgan Oakley</p>
+    </header>
+    <section class="banner">
+        <img src="" alt="Avatar Image" />
+        <p>Hi there,</p>
+        <p>Morgan Oakley (@morgan)</p>
+        <button id="new">New</button>
+        <button id="upload">Upload</button>
+        <button id="share">Share</button>
+    </section>
+    <aside class="sidebar">
+        <a href="#" class="logo-link">
+            <div class="icon"></div>
+            <p class="title">Dashboard</p>
+        </a>
+        <ul class="nav">
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities</li>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+        </ul>
+    </aside>
+    <main>
+        <section class="projects">
+            <h1>Projects</h1>
+            <div class="card">
+                <p class="title"></p>
+                <p></p>
+                <div class="interact">
+                    <button class="star"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div>
+            </div>
+            <div class="card">
+                <p class="title"></p>
+                <p></p>
+                <div class="interact">
+                    <button class="star"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div>
+            </div>
+            <div class="card">
+                <p class="title"></p>
+                <p></p>
+                <div class="interact">
+                    <button class="star"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div>
+            </div>
+            <div class="card">
+                <p class="title"></p>
+                <p></p>
+                <div class="interact">
+                    <button class="star"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div>
+            </div>
+            <div class="card">
+                <p class="title"></p>
+                <p></p>
+                <div class="interact">
+                    <button class="star"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div>
+            </div>
+            <div class="card">
+                <p class="title"></p>
+                <p></p>
+                <div class="interact">
+                    <button class="star"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div>
+            </div>
+        </section>
+
+        <section class="announcements">
+            <h1>Announcements</h1>
+            <div>
+                <div>
+                    <p class="title">Site Maintenance</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in elit nibh. Aenean semper, diam vitae auctor mollis, velit libero accumsan arcu, sed ultrices eros ipsum sed tellus</p>
+                </div>
+                <div>
+                    <p class="title">Community Share Day</p>
+                    <p>Aliquam dignissim tortor a porta semper. Aenean consectetur ipsum et dolor lobortis, at pretium nunc congue. Fusce vel erat porttitor, maximus ante eu, eleifend tortor. Pellentesque ut suscipit ipsum, non pharetra metus.</p>
+                </div>
+                <div>
+                    <p class="title">Updated Privacy Policy</p>
+                    <p>Ut commodo metus sit amet ante vehicula, sit amet mattis erat rutrum. Donec pulvinar euismod mauris in efficitur. Morbi non tortor vel magna bibendum iaculis. Sed in nisl in ex mattis finibus.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="trending">
+            <h1>Trending</h1>
+            <div>
+                <img src="" alt="" class="avatar">
+                <div>
+                    <p class="user"></p>
+                    <p class="tagline"></p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="" class="avatar">
+                <div>
+                    <p class="user"></p>
+                    <p class="tagline"></p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="" class="avatar">
+                <div>
+                    <p class="user"></p>
+                    <p class="tagline"></p>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="" class="avatar">
+                <div>
+                    <p class="user"></p>
+                    <p class="tagline"></p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
