Add dummy content

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <section class="projects">
             <h1>Projects</h1>
             <div class="card">
-                <p class="title"></p>
-                <p></p>
+                <p class="title">Super Cool Project</p>
+                <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
                 <div class="interact">
                     <button class="star"></button>
                     <button class="watch"></button>
@@ -51,8 +51,8 @@
                 </div>
             </div>
             <div class="card">
-                <p class="title"></p>
-                <p></p>
+                <p class="title">Less Cool Project</p>
+                <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
                 <div class="interact">
                     <button class="star"></button>
                     <button class="watch"></button>
@@ -60,8 +60,8 @@
                 </div>
             </div>
             <div class="card">
-                <p class="title"></p>
-                <p></p>
+                <p class="title">Impossible App</p>
+                <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
                 <div class="interact">
                     <button class="star"></button>
                     <button class="watch"></button>
@@ -69,8 +69,8 @@
                 </div>
             </div>
             <div class="card">
-                <p class="title"></p>
-                <p></p>
+                <p class="title">Easy Peasy App</p>
+                <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
                 <div class="interact">
                     <button class="star"></button>
                     <button class="watch"></button>
@@ -78,8 +78,8 @@
                 </div>
             </div>
             <div class="card">
-                <p class="title"></p>
-                <p></p>
+                <p class="title">Ad Blocker</p>
+                <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
                 <div class="interact">
                     <button class="star"></button>
                     <button class="watch"></button>
@@ -87,8 +87,8 @@
                 </div>
             </div>
             <div class="card">
-                <p class="title"></p>
-                <p></p>
+                <p class="title">Money Maker</p>
+                <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor pupus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
                 <div class="interact">
                     <button class="star"></button>
                     <button class="watch"></button>
