Add more dummy content

--- a/index.html
+++ b/index.html
@@ -120,29 +120,29 @@
             <div>
                 <img src="" alt="" class="avatar">
                 <div>
-                    <p class="user"></p>
-                    <p class="tagline"></p>
+                    <p class="user">@tegan</p>
+                    <p class="project">World Peace Builder</p>
                 </div>
             </div>
             <div>
                 <img src="" alt="" class="avatar">
                 <div>
-                    <p class="user"></p>
-                    <p class="tagline"></p>
+                    <p class="user">@morgan</p>
+                    <p class="project">Super Cool Project</p>
                 </div>
             </div>
             <div>
                 <img src="" alt="" class="avatar">
                 <div>
-                    <p class="user"></p>
-                    <p class="tagline"></p>
+                    <p class="user">@kendall</p>
+                    <p class="project">Life Changing App</p>
                 </div>
             </div>
             <div>
                 <img src="" alt="" class="avatar">
                 <div>
-                    <p class="user"></p>
-                    <p class="tagline"></p>
+                    <p class="user">@alex</p>
+                    <p class="project">No Traffic Maker</p>
                 </div>
             </div>
         </section>
