--- a/index.html
+++ b/index.html
@@ -4,148 +4,151 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="icon search"></div>
-        <search></search>
-        <div class="icon notifications"></div>
-        <img src="" alt="Avatar Image" />
-        <p>Morgan Oakley</p>
-    </header>
-    <section class="banner">
-        <img src="" alt="Avatar Image" />
-        <p>Hi there,</p>
-        <p>Morgan Oakley (@morgan)</p>
-        <button id="new">New</button>
-        <button id="upload">Upload</button>
-        <button id="share">Share</button>
-    </section>
-    <aside class="sidebar">
-        <a href="#" class="logo-link">
-            <div class="icon"></div>
-            <p class="title">Dashboard</p>
-        </a>
-        <ul class="nav">
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
-        </ul>
-    </aside>
-    <main>
-        <section class="projects">
-            <h1>Projects</h1>
-            <div class="card">
-                <p class="title">Super Cool Project</p>
-                <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
-                <div class="interact">
-                    <button class="star"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
-                </div>
-            </div>
-            <div class="card">
-                <p class="title">Less Cool Project</p>
-                <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
-                <div class="interact">
-                    <button class="star"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
-                </div>
-            </div>
-            <div class="card">
-                <p class="title">Impossible App</p>
-                <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
-                <div class="interact">
-                    <button class="star"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
-                </div>
-            </div>
-            <div class="card">
-                <p class="title">Easy Peasy App</p>
-                <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
-                <div class="interact">
-                    <button class="star"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
-                </div>
-            </div>
-            <div class="card">
-                <p class="title">Ad Blocker</p>
-                <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
-                <div class="interact">
-                    <button class="star"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
-                </div>
-            </div>
-            <div class="card">
-                <p class="title">Money Maker</p>
-                <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor pupus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
-                <div class="interact">
-                    <button class="star"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
-                </div>
-            </div>
+    <div class="container">
+        <header>
+            <div class="icon search"></div>
+            <search></search>
+            <div class="icon notifications"></div>
+            <img src="" alt="Avatar Image" />
+            <p>Morgan Oakley</p>
+        </header>
+        <section class="banner">
+            <img src="" alt="Avatar Image" />
+            <p>Hi there,</p>
+            <p>Morgan Oakley (@morgan)</p>
+            <button id="new">New</button>
+            <button id="upload">Upload</button>
+            <button id="share">Share</button>
         </section>
+        <aside class="sidebar">
+            <a href="#" class="logo-link">
+                <div class="icon"></div>
+                <p class="title">Dashboard</p>
+            </a>
+            <ul class="nav">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </aside>
+        <main>
+            <section class="projects">
+                <h1>Projects</h1>
+                <div class="card">
+                    <p class="title">Super Cool Project</p>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <div class="interact">
+                        <button class="star"></button>
+                        <button class="watch"></button>
+                        <button class="share"></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <p class="title">Less Cool Project</p>
+                    <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                    <div class="interact">
+                        <button class="star"></button>
+                        <button class="watch"></button>
+                        <button class="share"></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <p class="title">Impossible App</p>
+                    <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                    <div class="interact">
+                        <button class="star"></button>
+                        <button class="watch"></button>
+                        <button class="share"></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <p class="title">Easy Peasy App</p>
+                    <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                    <div class="interact">
+                        <button class="star"></button>
+                        <button class="watch"></button>
+                        <button class="share"></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <p class="title">Ad Blocker</p>
+                    <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+                    <div class="interact">
+                        <button class="star"></button>
+                        <button class="watch"></button>
+                        <button class="share"></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <p class="title">Money Maker</p>
+                    <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor pupus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+                    <div class="interact">
+                        <button class="star"></button>
+                        <button class="watch"></button>
+                        <button class="share"></button>
+                    </div>
+                </div>
+            </section>
 
-        <section class="announcements">
-            <h1>Announcements</h1>
-            <div>
+            <section class="announcements">
+                <h1>Announcements</h1>
                 <div>
-                    <p class="title">Site Maintenance</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in elit nibh. Aenean semper, diam vitae auctor mollis, velit libero accumsan arcu, sed ultrices eros ipsum sed tellus</p>
+                    <div>
+                        <p class="title">Site Maintenance</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in elit nibh. Aenean semper, diam vitae auctor mollis, velit libero accumsan arcu, sed ultrices eros ipsum sed tellus</p>
+                    </div>
+                    <div>
+                        <p class="title">Community Share Day</p>
+                        <p>Aliquam dignissim tortor a porta semper. Aenean consectetur ipsum et dolor lobortis, at pretium nunc congue. Fusce vel erat porttitor, maximus ante eu, eleifend tortor. Pellentesque ut suscipit ipsum, non pharetra metus.</p>
+                    </div>
+                    <div>
+                        <p class="title">Updated Privacy Policy</p>
+                        <p>Ut commodo metus sit amet ante vehicula, sit amet mattis erat rutrum. Donec pulvinar euismod mauris in efficitur. Morbi non tortor vel magna bibendum iaculis. Sed in nisl in ex mattis finibus.</p>
+                    </div>
                 </div>
-                <div>
-                    <p class="title">Community Share Day</p>
-                    <p>Aliquam dignissim tortor a porta semper. Aenean consectetur ipsum et dolor lobortis, at pretium nunc congue. Fusce vel erat porttitor, maximus ante eu, eleifend tortor. Pellentesque ut suscipit ipsum, non pharetra metus.</p>
-                </div>
-                <div>
-                    <p class="title">Updated Privacy Policy</p>
-                    <p>Ut commodo metus sit amet ante vehicula, sit amet mattis erat rutrum. Donec pulvinar euismod mauris in efficitur. Morbi non tortor vel magna bibendum iaculis. Sed in nisl in ex mattis finibus.</p>
-                </div>
-            </div>
-        </section>
+            </section>
 
-        <section class="trending">
-            <h1>Trending</h1>
-            <div>
-                <img src="" alt="" class="avatar">
+            <section class="trending">
+                <h1>Trending</h1>
                 <div>
-                    <p class="user">@tegan</p>
-                    <p class="project">World Peace Builder</p>
+                    <img src="" alt="" class="avatar">
+                    <div>
+                        <p class="user">@tegan</p>
+                        <p class="project">World Peace Builder</p>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="" alt="" class="avatar">
                 <div>
-                    <p class="user">@morgan</p>
-                    <p class="project">Super Cool Project</p>
+                    <img src="" alt="" class="avatar">
+                    <div>
+                        <p class="user">@morgan</p>
+                        <p class="project">Super Cool Project</p>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="" alt="" class="avatar">
                 <div>
-                    <p class="user">@kendall</p>
-                    <p class="project">Life Changing App</p>
+                    <img src="" alt="" class="avatar">
+                    <div>
+                        <p class="user">@kendall</p>
+                        <p class="project">Life Changing App</p>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img src="" alt="" class="avatar">
                 <div>
-                    <p class="user">@alex</p>
-                    <p class="project">No Traffic Maker</p>
+                    <img src="" alt="" class="avatar">
+                    <div>
+                        <p class="user">@alex</p>
+                        <p class="project">No Traffic Maker</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
