Add icon tags for sidebar nav

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <p class="title">Dashboard</p>
             </a>
             <ul class="nav">
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img src="" alt="" class="icon">Home</li>
+                <li><img src="" alt="" class="icon">Profile</li>
+                <li><img src="" alt="" class="icon">Messages</li>
+                <li><img src="" alt="" class="icon">History</li>
+                <li><img src="" alt="" class="icon">Tasks</li>
+                <li><img src="" alt="" class="icon">Communities</li>
+                <li><img src="" alt="" class="icon">Settings</li>
+                <li><img src="" alt="" class="icon">Support</li>
+                <li><img src="" alt="" class="icon">Privacy</li>
             </ul>
         </aside>
         <main>
