Fix sizes (design doc was in 144 dpi, not 72dpi)

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <p class="title">Dashboard</p>
             </a>
             <ul class="nav">
-                <li><img src="" alt="" class="icon">Home</li>
-                <li><img src="" alt="" class="icon">Profile</li>
-                <li><img src="" alt="" class="icon">Messages</li>
-                <li><img src="" alt="" class="icon">History</li>
-                <li><img src="" alt="" class="icon">Tasks</li>
-                <li><img src="" alt="" class="icon">Communities</li>
-                <li><img src="" alt="" class="icon">Settings</li>
-                <li><img src="" alt="" class="icon">Support</li>
-                <li><img src="" alt="" class="icon">Privacy</li>
+                <li><img src="" alt="" class="icon"><p>Home</p></li>
+                <li><img src="" alt="" class="icon"><p>Profile</p></li>
+                <li><img src="" alt="" class="icon"><p>Messages</p></li>
+                <li><img src="" alt="" class="icon"><p>History</p></li>
+                <li><img src="" alt="" class="icon"><p>Tasks</p></li>
+                <li><img src="" alt="" class="icon"><p>Communities</p></li>
+                <li><img src="" alt="" class="icon"><p>Settings</p></li>
+                <li><img src="" alt="" class="icon"><p>Support</p></li>
+                <li><img src="" alt="" class="icon"><p>Privacy</p></li>
             </ul>
         </aside>
         <main>
