Layout .projects with grid

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </aside>
         <main>
             <section class="projects">
-                <h1>Projects</h1>
+                <h1>Your Projects</h1>
                 <div class="container-cards">
                     <div class="card">
                         <p class="title">Super Cool Project</p>
