Style announcements card

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <section class="announcements">
                 <h1>Announcements</h1>
-                <div>
+                <div class="card">
                     <div>
                         <p class="title">Site Maintenance</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in elit nibh. Aenean semper, diam vitae auctor mollis, velit libero accumsan arcu, sed ultrices eros ipsum sed tellus</p>
