Attempt announcements ellipsis solution with todos added

--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
             <section class="announcements">
                 <h1>Announcements</h1>
                 <div class="card">
-                    <div>
+                    <div class="division">
                         <p class="title">Site Maintenance</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in elit nibh. Aenean semper, diam vitae auctor mollis, velit libero accumsan arcu, sed ultrices eros ipsum sed tellus</p>
                     </div>
-                    <div>
+                    <div class="division">
                         <p class="title">Community Share Day</p>
                         <p>Aliquam dignissim tortor a porta semper. Aenean consectetur ipsum et dolor lobortis, at pretium nunc congue. Fusce vel erat porttitor, maximus ante eu, eleifend tortor. Pellentesque ut suscipit ipsum, non pharetra metus.</p>
                     </div>
-                    <div>
+                    <div class="division">
                         <p class="title">Updated Privacy Policy</p>
                         <p>Ut commodo metus sit amet ante vehicula, sit amet mattis erat rutrum. Donec pulvinar euismod mauris in efficitur. Morbi non tortor vel magna bibendum iaculis. Sed in nisl in ex mattis finibus.</p>
                     </div>
@@ -121,32 +121,34 @@
 
             <section class="trending">
                 <h1>Trending</h1>
-                <div>
-                    <img src="" alt="" class="avatar">
+                <div class="card">
                     <div>
-                        <p class="user">@tegan</p>
-                        <p class="project">World Peace Builder</p>
+                        <img src="" alt="" class="avatar">
+                        <div>
+                            <p class="user">@tegan</p>
+                            <p class="project">World Peace Builder</p>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img src="" alt="" class="avatar">
                     <div>
-                        <p class="user">@morgan</p>
-                        <p class="project">Super Cool Project</p>
+                        <img src="" alt="" class="avatar">
+                        <div>
+                            <p class="user">@morgan</p>
+                            <p class="project">Super Cool Project</p>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img src="" alt="" class="avatar">
                     <div>
-                        <p class="user">@kendall</p>
-                        <p class="project">Life Changing App</p>
+                        <img src="" alt="" class="avatar">
+                        <div>
+                            <p class="user">@kendall</p>
+                            <p class="project">Life Changing App</p>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img src="" alt="" class="avatar">
                     <div>
-                        <p class="user">@alex</p>
-                        <p class="project">No Traffic Maker</p>
+                        <img src="" alt="" class="avatar">
+                        <div>
+                            <p class="user">@alex</p>
+                            <p class="project">No Traffic Maker</p>
+                        </div>
                     </div>
                 </div>
             </section>
