Style Announcements panel

--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
                 <div class="card">
                     <div class="division">
                         <p class="title">Site Maintenance</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in elit nibh. Aenean semper, diam vitae... auctor mollis, velit libero accumsan arcu, sed ultrices eros ipsum sed tellus</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in elit nibh. Aenean semper, diam vitae...</p>
                     </div>
                     <div class="division">
                         <p class="title">Community Share Day</p>
-                        <p>Aliquam dignissim tortor a porta semper. Aenean consectetur ipsum et dolor lobortis, at pretium nunc... congue Fusce vel erat porttitor, maximus ante eu, eleifend tortor. Pellentesque ut suscipit ipsum, non pharetra metus.</p>
+                        <p>Aliquam dignissim tortor a porta semper. Aenean consectetur ipsum et dolor lobortis, at pretium nunc...</p>
                     </div>
                     <div class="division">
                         <p class="title">Updated Privacy Policy</p>
-                        <p>Ut commodo metus sit amet ante vehicula, sit amet mattis erat rutrum. Donec pulvinar euismod mauris in... efficitur. Morbi non tortor vel magna bibendum iaculis. Sed in nisl in ex mattis finibus.</p>
+                        <p>Ut commodo metus sit amet ante vehicula, sit amet mattis erat rutrum. Donec pulvinar euismod mauris in...</p>
                     </div>
                 </div>
             </section>
