--- a/index.html
+++ b/index.html
@@ -122,28 +122,28 @@
             <section class="trending">
                 <h1>Trending</h1>
                 <div class="card">
-                    <div>
+                    <div class="division">
                         <img src="" alt="" class="avatar">
                         <div>
                             <p class="user">@tegan</p>
                             <p class="project">World Peace Builder</p>
                         </div>
                     </div>
-                    <div>
+                    <div class="division">
                         <img src="" alt="" class="avatar">
                         <div>
                             <p class="user">@morgan</p>
                             <p class="project">Super Cool Project</p>
                         </div>
                     </div>
-                    <div>
+                    <div class="division">
                         <img src="" alt="" class="avatar">
                         <div>
                             <p class="user">@kendall</p>
                             <p class="project">Life Changing App</p>
                         </div>
                     </div>
-                    <div>
+                    <div class="division">
                         <img src="" alt="" class="avatar">
                         <div>
                             <p class="user">@alex</p>
