Change avatar img to be div wrapped

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <div class="icon search"></div>
             <search></search>
             <div class="icon notifications"></div>
-            <img src="" alt="Avatar Image" />
+            <div class="avatar"><img src="" alt="Avatar Image" /></div>
             <p>Morgan Oakley</p>
         </header>
         <section class="banner">
-            <img src="" alt="Avatar Image" />
+            <div class="avatar"><img src="" alt="Avatar Image" /></div>
             <p>Hi there,</p>
             <p>Morgan Oakley (@morgan)</p>
             <button id="new">New</button>
@@ -123,28 +123,28 @@
                 <h1>Trending</h1>
                 <div class="card">
                     <div class="division">
-                        <img src="" alt="" class="avatar">
+                        <div class="avatar"><img src="" alt="avatar icon"></div>
                         <div>
                             <p class="user">@tegan</p>
                             <p class="project">World Peace Builder</p>
                         </div>
                     </div>
                     <div class="division">
-                        <img src="" alt="" class="avatar">
+                        <div class="avatar"><img src="" alt="avatar icon"></div>
                         <div>
                             <p class="user">@morgan</p>
                             <p class="project">Super Cool Project</p>
                         </div>
                     </div>
                     <div class="division">
-                        <img src="" alt="" class="avatar">
+                        <div class="avatar"><img src="" alt="avatar icon"></div>
                         <div>
                             <p class="user">@kendall</p>
                             <p class="project">Life Changing App</p>
                         </div>
                     </div>
                     <div class="division">
-                        <img src="" alt="" class="avatar">
+                        <div class="avatar"><img src="" alt="avatar icon"></div>
                         <div>
                             <p class="user">@alex</p>
                             <p class="project">No Traffic Maker</p>
