--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
     <div class="container">
         <header>
-            <div class="icon search"></div>
-            <search></search>
+            <search>
+                <form action="#">
+                    <button type="submit">🔍</button>
+                    <input type="search" id="searchbar" name="search-query" />
+                </form>
+            </search>
             <div class="icon notifications"></div>
             <div class="avatar"><img src="" alt="Avatar Image" /></div>
             <p>Morgan Oakley</p>
