Add selectors for header section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                     <input type="search" id="searchbar" name="search-query" />
                 </form>
             </search>
-            <div class="icon notifications"></div>
+            <div class="icon notifications">🔔</div>
             <div class="avatar"><img src="" alt="Avatar Image" /></div>
-            <p>Morgan Oakley</p>
+            <p class="username">Morgan Oakley</p>
         </header>
         <section class="banner">
             <div class="avatar"><img src="" alt="Avatar Image" /></div>
