Initial grid for header and banner

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         </header>
         <section class="banner">
             <div class="avatar"><img src="" alt="Avatar Image" /></div>
-            <p>Hi there,</p>
-            <p>Morgan Oakley (@morgan)</p>
+            <div class="message">
+                <p>Hi there,</p>
+                <p>Morgan Oakley (@morgan)</p>
+            </div>
             <button id="new">New</button>
             <button id="upload">Upload</button>
             <button id="share">Share</button>
