--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </section>
         <aside class="sidebar">
             <a href="#" class="logo-link">
-                <div class="icon"></div>
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>view-dashboard</title><path d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" /></svg>
+                </div>
                 <p class="title">Dashboard</p>
             </a>
             <ul class="nav">
