Resize and gap sidebar icons (placeholders)

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
                 <p class="title">Dashboard</p>
             </a>
             <ul class="nav">
-                <li><img src="" alt="" class="icon"><p>Home</p></li>
-                <li><img src="" alt="" class="icon"><p>Profile</p></li>
-                <li><img src="" alt="" class="icon"><p>Messages</p></li>
-                <li><img src="" alt="" class="icon"><p>History</p></li>
-                <li><img src="" alt="" class="icon"><p>Tasks</p></li>
-                <li><img src="" alt="" class="icon"><p>Communities</p></li>
-                <li><img src="" alt="" class="icon"><p>Settings</p></li>
-                <li><img src="" alt="" class="icon"><p>Support</p></li>
-                <li><img src="" alt="" class="icon"><p>Privacy</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Home</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Profile</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Messages</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>History</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Tasks</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Communities</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Settings</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Support</p></li>
+                <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>home</title><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg><p>Privacy</p></li>
             </ul>
         </aside>
         <main>
