--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="interact">
                             <button class="star"></button>
                             <button class="watch"></button>
-                            <button class="share"></button>
+                            <button class="fork"></button>
                         </div>
                     </div>
                     <div class="card">
@@ -71,7 +71,7 @@
                         <div class="interact">
                             <button class="star"></button>
                             <button class="watch"></button>
-                            <button class="share"></button>
+                            <button class="fork"></button>
                         </div>
                     </div>
                     <div class="card">
@@ -80,7 +80,7 @@
                         <div class="interact">
                             <button class="star"></button>
                             <button class="watch"></button>
-                            <button class="share"></button>
+                            <button class="fork"></button>
                         </div>
                     </div>
                     <div class="card">
@@ -89,7 +89,7 @@
                         <div class="interact">
                             <button class="star"></button>
                             <button class="watch"></button>
-                            <button class="share"></button>
+                            <button class="fork"></button>
                         </div>
                     </div>
                     <div class="card">
@@ -98,7 +98,7 @@
                         <div class="interact">
                             <button class="star"></button>
                             <button class="watch"></button>
-                            <button class="share"></button>
+                            <button class="fork"></button>
                         </div>
                     </div>
                     <div class="card">
@@ -107,7 +107,7 @@
                         <div class="interact">
                             <button class="star"></button>
                             <button class="watch"></button>
-                            <button class="share"></button>
+                            <button class="fork"></button>
                         </div>
                     </div>
                 </div>
