--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <main>
             <section class="projects">
                 <h1>Your Projects</h1>
-                <div class="container-cards">
+                <div class="cards-container">
                     <div class="card">
                         <p class="title">Super Cool Project</p>
                         <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
